--- a/src/style/index.css
+++ b/src/style/index.css
@@ -28,7 +28,7 @@ body{
 }
 
 #addTask{
-    width: 620px;
+    width: 700px;
     height: 65px;
     font-size: 24px;
     color: #C8C8C8;
@@ -37,7 +37,7 @@ body{
 }
 
 .search{
-    width: 620px;
+    width: 700px;
     height: 65px;
     font-size: 24px;
     color: #C8C8C8;
@@ -57,7 +57,7 @@ body{
 }
 
 .inputTaskTitle{
-    width: 620px;
+    width: 700px;
     height: 75px;
     background: #F2F2F2;
     margin:0px auto;
@@ -69,7 +69,7 @@ body{
     background: #F2F2F2;
     border:none;
     height: 28px;
-    width: 450px;
+    width: 550px;
     font-size: 24px;
     margin: 25px;
 }
@@ -78,14 +78,14 @@ body{
     background: #F2F2F2;
     border:none;
     height: 28px;
-    width: 380px;
+    width: 550px;
     font-size: 24px;
     padding: 25px;
     float:left;
 }
 
 .calendarButton{
-    width: 620px;
+    width: 700px;
     height: 60px;
     font-size: 18px;
     text-align: center;
@@ -131,7 +131,7 @@ body{
 }
 
 .addButton{
-    width: 310px;
+    width: 350px;
     height: 60px;
     font-size: 24px;
     text-align: center;
@@ -143,6 +143,10 @@ body{
     color: #ffffff;
 }
 
+.saveButtons{
+    width: 700px;
+}
+
 .cancelButton{
     background: #fffffd;
     color: #D0021B;
@@ -151,7 +155,7 @@ body{
 .list{
     background: #F2F2F2;
     height: 100px;
-    width: 620px;
+    width: 700px;
     border-radius: 5px;
 }
 
